# mcmodmanager

./: README.md  pyproject.toml
aur/: PKGBUILD
src/lib/: downloader.py  jarparser.py  searcher.py  version.py
src/mcmodmanager/: __main__.py  download.py  health.py  health2.py
tests/: version.py
